// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Flags > --optimize-* > max-chunks should apply #0 1`] = `
Object {
  "entry": Array [
    "<PROJECT_ROOT>/test/fixtures/common/entry-a.js",
    "<PROJECT_ROOT>/test/fixtures/common/entry-b.js",
    "<PROJECT_ROOT>/test/fixtures/common/entry-c.js",
  ],
  "mode": "development",
  "plugins": Array [
    LimitChunkCountPlugin {
      "options": Object {
        "maxChunks": 1000,
      },
    },
    NamedModulesPlugin {
      "options": Object {},
    },
  ],
  "reporter": "<PROJECT_ROOT>/test/fixtures/common/test-reporter.js",
}
`;

exports[`Flags > --optimize-* > max-chunks should build #0 1`] = `
"Version: webpack 4.12.1
  Asset      Size  Chunks             Chunk Names
main.js  <size>    main  [emitted]  main
Entrypoint main = main.js
[./test/fixtures/common/entry-a.js] 41 bytes {main} [built]
[./test/fixtures/common/entry-b.js] 41 bytes {main} [built]
[./test/fixtures/common/entry-c.js] 41 bytes {main} [built]
[0] multi ./test/fixtures/common/entry-a.js ./test/fixtures/common/entry-b.js ./test/fixtures/common/entry-c.js 52 bytes {main} [built]"
`;

exports[`Flags > --optimize-* > min-chunk-size should apply #0 1`] = `
Object {
  "entry": "<PROJECT_ROOT>/test/fixtures/common/entry-a.js",
  "mode": "development",
  "plugins": Array [
    MinChunkSizePlugin {
      "options": Object {
        "minChunkSize": 10,
      },
    },
    NamedModulesPlugin {
      "options": Object {},
    },
  ],
  "reporter": "<PROJECT_ROOT>/test/fixtures/common/test-reporter.js",
}
`;

exports[`Flags > --optimize-* > min-chunk-size should build #0 1`] = `
"Version: webpack 4.12.1
  Asset      Size  Chunks             Chunk Names
main.js  <size>    main  [emitted]  main
Entrypoint main = main.js
[./test/fixtures/common/entry-a.js] 41 bytes {main} [built]"
`;

exports[`Flags > --optimize-* > minimize should apply #0 1`] = `
Object {
  "entry": "<PROJECT_ROOT>/test/fixtures/common/entry-a.js",
  "mode": "development",
  "plugins": Array [
    LoaderOptionsPlugin {
      "options": Object {
        "minimize": true,
        "test": Object {
          "test": [Function],
        },
      },
    },
    NamedModulesPlugin {
      "options": Object {},
    },
  ],
  "reporter": "<PROJECT_ROOT>/test/fixtures/common/test-reporter.js",
}
`;

exports[`Flags > --optimize-* > minimize should build #0 1`] = `
"Version: webpack 4.12.1
  Asset      Size  Chunks             Chunk Names
main.js  <size>    main  [emitted]  main
Entrypoint main = main.js
[./test/fixtures/common/entry-a.js] 41 bytes {main} [built]"
`;
